<resources>
    <string name="app_name">ExpendiTrak</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_add">Add Expense</string>
    <string name="expense_list">Expense List</string>
    <string name="calulate_expense_total">Calulate Expense Total</string>
    <string name="merchant_name_et">Merchant Name</string>
    <string name="price_et">Price</string>
    <string name="date_et">Date</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="add_expense">Add Expense</string>
    <string name="date_purched">Date Purched</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
